# simple-email-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  accounts.example.json  pyproject.toml  simple_email_mcp.py
tests/: test_simple_email_mcp.py
